--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
   "semi": false,
   "singleQuote": true,
   "printWidth": 250,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindConfig": "./tailwind.config.ts",
+  "tailwindPreserveDuplicates": true,
+  "tailwindPreserveWhitespace": false
 }
