--- a/package.json
+++ b/package.json
@@ -9,15 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.15.19",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.162.0",
     "leva": "^0.9.35",
+    "locomotive-scroll": "^4.1.4",
     "next": "14.1.3",
+    "postprocessing": "^6.36.0",
+    "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-locomotive-scroll": "^0.2.2",
     "react-to-print": "^2.15.1",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "three-stdlib": "^2.32.1",
+    "tunnel-rat": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -35,8 +44,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.4.2"
   }
