--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.15.19",
     "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.162.0",
+    "gsap": "^3.12.5",
+    "html2canvas": "^1.4.1",
     "leva": "^0.9.35",
     "locomotive-scroll": "^4.1.4",
+    "lodash": "^4.17.21",
     "next": "14.1.3",
     "postprocessing": "^6.36.0",
     "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-to-print": "^2.15.1",
     "three": "^0.162.0",
@@ -29,6 +34,7 @@
     "tunnel-rat": "^0.1.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
