--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.15.19",
     "@react-three/postprocessing": "^2.16.2",
@@ -25,13 +26,16 @@
     "r3f-perf": "^7.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.13.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-to-print": "^2.15.1",
+    "swr": "^2.2.5",
     "three": "^0.162.0",
     "three-stdlib": "^2.32.1",
-    "tunnel-rat": "^0.1.2"
+    "tunnel-rat": "^0.1.2",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
