--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/postprocessing": "^2.16.2",
     "@react-three/rapier": "^1.4.0",
     "@types/three": "^0.162.0",
+    "@vercel/analytics": "^1.3.1",
     "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
     "leva": "^0.9.35",
